# learning_about_git

./: .gitignore  CMakeLists.txt  LICENSE  main.cc
src/: generator.cc
